--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,8 @@
     "@ionic-native/splash-screen": "^5.34.0",
     "@ionic-native/status-bar": "^5.34.0",
     "@ionic/angular": "^5.5.2",
+    "@ionic/storage": "^3.0.6",
+    "@ionic/storage-angular": "^3.0.6",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
