--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~12.0.1",
     "@angular/platform-browser-dynamic": "~12.0.1",
     "@angular/router": "~12.0.1",
+    "@auth0/angular-jwt": "^5.0.2",
     "@ionic-native/core": "^5.34.0",
     "@ionic-native/geolocation": "^5.34.0",
     "@ionic-native/native-geocoder": "^5.34.0",
